--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
-    "@types/node": "^18.11.12",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.14.0",
+    "@types/webpack-env": "^1.18.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "lodash": "^4.17.21",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "rimraf": "^4.1.2",
